--- a/teams/team-riker/dev/templates/alb-skiapp/ingress.yaml
+++ b/teams/team-riker/dev/templates/alb-skiapp/ingress.yaml
@@ -12,7 +12,7 @@ metadata:
     #alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
     alb.ingress.kubernetes.io/tags: Environment=dev,Team=Riker
 spec:
-  ingressClassName: alb
+  ingressClassName: nginx
   rules:
     - host: #skiapp.{{ .Values.spec.ingress.host }}
       http:
