Fix ingress path / conflict

--- a/teams/team-riker/dev/templates/alb-skiapp/ingress.yaml
+++ b/teams/team-riker/dev/templates/alb-skiapp/ingress.yaml
@@ -17,7 +17,7 @@ spec:
     - host: #skiapp.{{ .Values.spec.ingress.host }}
       http:
         paths:
-          - path: /
+          - path: /skiapp
             pathType: Prefix
             backend:
               service:
